--- a/game.html
+++ b/game.html
@@ -54,7 +54,7 @@
             <input type="number" id="guess" placeholder="Enter a number" />
             <button onclick="checkGuess()">Submit</button>
             <p id="message"></p>
-            <button onclick="makePayment()">Buy More Tries</button>
+            <button onclick="buyMoreTries()">Buy More Tries</button>
         </div>
     </div>
 
@@ -75,12 +75,23 @@
             }
         }
 
-        function makePayment() {
-            Telegram.WebApp.init();
-            Telegram.WebApp.sendData(JSON.stringify({
-                action: "buy",
-                product_id: "buy_tries"
-            }));
+        async function buyMoreTries() {
+            const userId = 'some-unique-user-id'; // Replace with actual user ID or identifier
+            try {
+                const response = await fetch('https://904f-81-59-73-2.ngrok-free.app/create-invoice', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({ userId })
+                });
+                const data = await response.json();
+                if (data.invoiceLink) {
+                    window.location.href = data.invoiceLink;
+                }
+            } catch (error) {
+                console.error('Error creating invoice link:', error);
+            }
         }
 
         // Ensure landscape mode and full screen for Telegram mini app
