--- a/game.html
+++ b/game.html
@@ -78,7 +78,7 @@
         async function buyMoreTries() {
             const userId = 'some-unique-user-id'; // Replace with actual user ID or identifier
             try {
-                const response = await fetch('https://904f-81-59-73-2.ngrok-free.app/create-invoice', {
+                const response = await fetch('https://ee7c-81-59-73-2.ngrok-free.app/create-invoice', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
