--- a/game.html
+++ b/game.html
@@ -55,6 +55,13 @@
             <button onclick="checkGuess()">Submit</button>
             <p id="message"></p>
             <button onclick="buyMoreTries()">Buy More Tries</button>
+            <div id="telegram-login"></div>
+            <script async src="https://telegram.org/js/telegram-widget.js?7"
+            data-telegram-login="mohdadilvp_bot"
+            data-size="large"
+            data-radius="10"
+            data-auth-url="https://yourdomain.com/auth/telegram/callback"
+            data-request-access="write"></script>
         </div>
     </div>
 
@@ -110,5 +117,6 @@
         // Initial check
         ensureLandscape();
     </script>
+
 </body>
 </html>
