--- a/game.html
+++ b/game.html
@@ -60,7 +60,7 @@
             data-telegram-login="mohdadilvp_bot"
             data-size="large"
             data-radius="10"
-            data-auth-url="https://yourdomain.com/auth/telegram/callback"
+            data-auth-url="https://1b7b-81-59-73-2.ngrok-free.app/auth/telegram/callback"
             data-request-access="write"></script>
         </div>
     </div>
@@ -85,7 +85,7 @@
         async function buyMoreTries() {
             const userId = 'some-unique-user-id'; // Replace with actual user ID or identifier
             try {
-                const response = await fetch('https://6f90-81-59-73-2.ngrok-free.app/create-invoice', {
+                const response = await fetch('https://1b7b-81-59-73-2.ngrok-free.app/create-invoice', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
